Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.5.8 (06/26/2009):
	ICQ:
	* Fix misparsing a web message as an SMS message. (Yuriy Kaminskiy)

	MySpace:
	* Accounts with empty buddy lists are now properly marked as connected.
	* Fix receiving messages from users of MySpace IM's web client.

	Yahoo:
	* Fixed phantom online buddies.  They should now properly disappear when
	  signing out.
	* Fixed the crashes some users were seeing with cn.scs.msg.yahoo.com in
	  2.5.7.
	* Fixed compiling on systems with glib 2.4.x or older.
	* Fixed an issue with file transfers.  This may not resolve all issues,
	  but it should resolve at least some of the most common ones.
	* The pager server will automatically update to scsa.msg.yahoo.com if the
	  user empties the field or if it is scs.msg.yahoo.com.  This should ease
	  the pain of transition to the new login method.

	XMPP:
	* Fix an incompatibility betweeen Prosody and libpurple clients.

version 2.5.7 (06/20/2009):
	* Yahoo Protocol 16 support, including new HTTPS login method; this should
	  fix a number of login problems that have recently cropped up.  (Sulabh
	  Mahajan, Mike "Maiku" Ruprecht)
	* Only display the AIM "Unable to Retrieve Buddy List" message once per
	  connection.  (Rob Taft)
	* Blocking MSN users not on your buddy list no longer disconnects you.
	* When performing operations on MSN, assume users are on the MSN/Passport
	  network if we don't get network ID's for them.

version 2.5.6 (05/19/2009):
	libpurple:
	* Improve sleep behavior by aggregation of longer timeouts on second
	  boundaries to allow better power saving.  (Arunan Balasubramaniam)
	* Fix various crashes on exit.
	* Make XML parsing more resilient to interactions with other libraries.
	  This, along with the fix for libxml2 bug 564217, fixes the crashes
	  on connect in XMPP with recent gst-plugins-bad (see #8830 for details).
	* Many security related fixes

	IRC: